[package]
name = "pushkind-broker"
version = "0.1.0"
edition = "2024"

[dependencies]
zmq = "0.10"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.16"
log = "0.4"
env_logger = "0.11"
config = { version = "0.15.14", default-features = false, features = [
    "yaml",
    "toml",
    "json",
] }
