[package]
name = "pushkind-broker"
version = "0.1.0"
edition = "2024"

[dependencies]
zmq = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
log = "0.4.29"
env_logger = "0.11.8"
config = { version = "0.15.19", default-features = false, features = ["yaml"] }

[dev-dependencies]
tempfile = "3.24.0"
